# literate-chainsaw

./: .gitignore  LICENSE  README.md  demo_scan.py  pyproject.toml
src/security_chainsaw/: __init__.py  __main__.py  patcher.py  scanner.py
tests/: test_patcher.py  test_scanner.py
