[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-chainsaw"
version = "0.1.0"
description = "Security Chainsaw: Security Audit CLI"
authors = [{ name="Tu Nombre", email="tu@email.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
